--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <header>
   <div class="brand"><span class="dot"></span><span style="font-weight:900">تطوع شباب بلعما</span></div>
   <h1>نموذج تسجيل المحتاجين</h1>
-  <p class="sub">إرسال مباشر بدون عرض Google Form + GPS (بالأمتار) مع رفض أي موقع غير دقيق.</p>
+  <p class="sub">.</p>
 </header>
 
 <div class="wrap">
@@ -619,3 +619,4 @@
 
 </body>
 </html>
+
